--- a/treasured-circle/src/pages/About.css
+++ b/treasured-circle/src/pages/About.css
@@ -23,12 +23,12 @@
   flex: 1 1 60%;
   font-size: 1.1rem;
   line-height: 1.8;
-  color: #333;
+  color: #333333;
 }
 
 .about-text h1 {
   font-size: 2.5rem;
-  color: #1d4ed8;
+  color: blue;
   margin-bottom: 1rem;
 }
 
